tests/pass/ConditionalExpression.java
package pass;

public class ConditionalExpression {
    public int conditional(boolean cond, int then, int elseB){
        return cond ? then : elseB;
    }
}
