tests/fail/ConditionalExpression.java
package fail;

public class ConditionalExpression{

    public int cond(){
        return true ? "a" : 2;
    }
}